--- a/iot_module/Dockerfile
+++ b/iot_module/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile for API
 FROM python:3.8-slim
 
-WORKDIR /app
+WORKDIR .
 
 # Copier l'ensemble du contenu local dans le conteneur
 COPY . .
@@ -9,8 +9,6 @@ COPY . .
 # Installer les dépendances
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Exposer le port
-EXPOSE 5001
 
 # Commande par défaut pour lancer l'application
 CMD ["python", "app.py"]
