--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,39 @@
-version: '3.7'
+version: '3.1'
 
 services:
-  # mosquitto:
-  #   image: eclipse-mosquitto
-  #   container_name: mosquitto
-  #   ports:
-  #     - "1883:1883"
-  #   volumes:
-  #     - ./iot_module/mosquitto/config/:/mosquitto/config/
 
-  publisher:
+  api:
     build:
-      context: ./iot_module/publisher
-      dockerfile: Dockerfile
-    container_name: mqtt_publisher
+      context: ./api_module
+    image: api
+    ports:
+      - "5010:5010"
+    volumes:
+      - ./api_module/.:/app
 
-  subscriber:
-    build:
-      context: ./iot_module/subscriber
-      dockerfile: Dockerfile
-    container_name: mqtt_subscriber
+  flask-app:
+    image: flask-app
+    build: ./dashboard_module/Interface-web
+    ports:
+      - 5000:5000
+    volumes:
+      - ./dashboard_module/Interface-web/app/.:/app
 
-  # flask-app:
-  #   image: flask-app
-  #   build: ./dashboard_module/Interface-web
-  #   ports:
-  #     - 5000:5000
-  #   volumes:
-  #     - ./dashboard_module/Interface-web/app/.:/app
-  # mongo:
-  #   build:
-  #     context: ./dashboard_module/mongo
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "27017:27017"
+  mongo:
+    image: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+  
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
