--- a/dashboard_module/Interface-web/Dockerfile
+++ b/dashboard_module/Interface-web/Dockerfile
@@ -2,10 +2,13 @@ FROM python:3.8
 
 WORKDIR /app
 
-COPY requirements.txt /app/requirements.txt
+# Copier l'ensemble du contenu local dans le conteneur
+COPY . .
 
+# Installer les dépendances
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./app/ /app
+# Exposer le port
+EXPOSE 5020
 
 CMD ["python", "app.py"]
