--- a/api_module/Dockerfile
+++ b/api_module/Dockerfile
@@ -4,10 +4,12 @@ FROM python:3.8-slim
 WORKDIR /app
 
 # Copier l'ensemble du contenu local dans le conteneur
-COPY . .
+COPY requirements.txt /app/requirements.txt
 
 # Installer les dépendances
 RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update
+RUN apt-get install ffmpeg libsm6 libxext6  -y
 
 # Exposer le port
 EXPOSE 5010
