--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,23 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+
+
+  coap:
+    build:
+      context: ./iot_module/coap
+      dockerfile: Dockerfile
+    container_name: coap
+  
+
+  publisher:
+    build:
+      context: ./iot_module/publisher
+      dockerfile: Dockerfile
+    container_name: mqtt_publisher
+
+  subscriber:
+    build:
+      context: ./iot_module/subscriber
+      dockerfile: Dockerfile
+    container_name: mqtt_subscriber
