--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     build:
       context: ./iot_module/publisher
       dockerfile: Dockerfile
+    ports:
+      - "5031:5031"
     container_name: mqtt_publisher
 
   subscriber:
